--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,25 @@
-stages:
-  - addon
+cache:
+  untracked: true
 
-makeaddon:
-  stage: addon
-  tags: [steam]
+stages:
+  - clean
+  - pack
+  - copy
+
+cleanup:
+  stage: clean
   script:
-    - whoami
-    - cwd=$(pwd)
-    - msg=$(git log -1 --pretty=%B)
-    - cp -rf gamemodes/shoot/content/* .
-    - rm -rf gamemodes/shoot/content/
-    - mv gamemodes/shoot/addon.json addon.json
-    - mv gamemodes/shoot/shoot_icon.jpg shoot_icon.jpg
-    - cd /home/steam/server/bin/
-    - LD_LIBRARY_PATH=./ ./gmad_linux create -folder "$cwd" -out "$cwd/shoot.gma"
-    - LD_LIBRARY_PATH=./ ./gmpublish_linux update -addon "$cwd/shoot.gma" -id "1325059434" -changes "$msg"
+    - rm -f /var/www/html/download/jazztronauts/*
+
+package:
+  stage: pack
+  script: 
+    - 7z a build ./gamemodes
+    - 7z a -tzip build ./gamemodes
+
+update:
+  stage: copy
+  script:
+    - today=`date '+%Y_%m_%d__%H_%M_%S'`
+    - cp -f build.7z /var/www/html/download/jazztronauts/jazztronauts$today.7z
+    - cp -f build.zip /var/www/html/download/jazztronauts/jazztronauts$today.zip
