--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+          
     - name: Update latest addons from workshop
       working-directory: other/scraper
       run: |
         python scrape.py ${{secrets.STEAM_AUTH_KEY}}
         
-    - uses: actions/checkout@master
     - name: SFTP deploy
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
       env:
