Fix label assignment in issue templates
The "type:" prefix is how I format labels on my own repositories, didn't think anything of it since the latter part is the same.

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,6 +1,6 @@
 name: Bug report
 description: Report an problem with Jazztronauts
-labels: ["type: bug"]
+labels: ["bug"]
 
 body:
   - type: markdown
