--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,6 +1,6 @@
 name: Feature request
 description: Suggest an addition to Jazztronauts
-labels: ["type: enhancement"]
+labels: ["enhancement"]
 
 body:
   - type: markdown
